# utagoe

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: deployment.yml
libutagoe/: Cargo.toml
libutagoe/src/: lib.rs
libutagoe/src/platform/: mod.rs
libutagoe/src/platform/youtube/: mod.rs
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/pages/: DiscoverPage.tsx  PlayerPage.tsx
src/pages/DiscoverPage/: index.tsx
src/system/ButtonBase/: index.tsx
src/system/Sidebar/: index.tsx
