[package]
name = "libutagoe"
version = "0.1.0"
authors = ["RanolP <public.ranolp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
async-trait = "0.1.50"
thiserror = "1.0.25"

sled = "0.34.6"

rustube = { version = "0.3.3", features = ["rustls-tls", "microformat"] }
soundcloud = "0.4.0"